set min-width to avoid overflow of text

--- a/content/stylesheets/application.sass
+++ b/content/stylesheets/application.sass
@@ -2,6 +2,8 @@
 @import "colors"
 @import "fonts"
 
+$content-width: 960px
+
 @include reset-html5
 
 /* Reset */
@@ -28,6 +30,7 @@ header
 
 .content
   padding: 1em
+  min-width: $content-width
 
 h1
   margin: 0 0 0.33em 0
@@ -44,7 +47,7 @@ p
 /* Layout */
 .container
   margin: 0 auto
-  width: 960px
+  width: $content-width
 
 /* Styling */
 header, footer
